Bug 319215 - Kopete crashed when closing
Summary: Kopete crashed when closing
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.4.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-02 11:35 UTC by skaumo
Modified: 2013-06-01 21:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description skaumo 2013-05-02 11:35:38 UTC
Application: kopete (1.4.2)
KDE Platform Version: 4.10.2
Qt Version: 4.8.2
Operating System: Linux 3.2.0-40-generic x86_64
Distribution: Ubuntu 12.04.2 LTS

-- Information about the crash:
- What I was doing when the application crashed:

Editing chat templates, then closing Kopete to reload. It has taken unusually long to close... about 15s

-- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f040aceb780 (LWP 2797))]

Thread 5 (Thread 0x7f03ef233700 (LWP 2911)):
#0  0x00007f04070618cd in read () at ../sysdeps/unix/syscall-template.S:82
#1  0x00007f04020368cf in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f0401ffbba4 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f0401ffbfd6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f0401ffc49a in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f03eff21406 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#6  0x00007f040201d9e5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f0402ad6e9a in start_thread (arg=0x7f03ef233700) at pthread_create.c:308
#8  0x00007f040706eccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#9  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f03df436700 (LWP 2980)):
#0  0x00007f040203732a in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f0402037599 in g_mutex_lock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f0401ffc01b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f0401ffc164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f0408730926 in QEventDispatcherGlib::processEvents (this=0x7f03d00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007f04086ffe62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f04087000b7 in QEventLoop::exec (this=0x7f03d00013c0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f03ed3a0a25 in XMPP::SyncThread::run (this=0x1bf2750) at ../../../../../kopete/protocols/jabber/libiris/iris/irisnet/corelib/netinterface.cpp:151
#8  0x00007f040860209b in QThreadPrivate::start (arg=0x1bf2750) at thread/qthread_unix.cpp:307
#9  0x00007f0402ad6e9a in start_thread (arg=0x7f03df436700) at pthread_create.c:308
#10 0x00007f040706eccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f03efa34700 (LWP 3091)):
#0  0x00007f0402ada05d in __pthread_mutex_unlock_usercnt (mutex=<optimized out>, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  __pthread_mutex_unlock (mutex=0x7f03e8008430) at pthread_mutex_unlock.c:290
#2  0x00007f04020375d1 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f0401ffb83b in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f0401ffbf5b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f0401ffc164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f0408730926 in QEventDispatcherGlib::processEvents (this=0x7f03e800c7a0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#7  0x00007f04086ffe62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#8  0x00007f04087000b7 in QEventLoop::exec (this=0x7f03efa33dd0, flags=...) at kernel/qeventloop.cpp:204
#9  0x00007f04085ff077 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#10 0x00007f04086dfb6f in QInotifyFileSystemWatcherEngine::run (this=0x2638020) at io/qfilesystemwatcher_inotify.cpp:248
#11 0x00007f040860209b in QThreadPrivate::start (arg=0x2638020) at thread/qthread_unix.cpp:307
#12 0x00007f0402ad6e9a in start_thread (arg=0x7f03efa34700) at pthread_create.c:308
#13 0x00007f040706eccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#14 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f03c9e78700 (LWP 5528)):
#0  0x00007f0407063313 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f0401ffc036 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f0401ffc164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f0408730926 in QEventDispatcherGlib::processEvents (this=0x7f03c40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f04086ffe62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f04087000b7 in QEventLoop::exec (this=0x7f03c9e77dd0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f04085ff077 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f04086dfb6f in QInotifyFileSystemWatcherEngine::run (this=0x3099790) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f040860209b in QThreadPrivate::start (arg=0x3099790) at thread/qthread_unix.cpp:307
#9  0x00007f0402ad6e9a in start_thread (arg=0x7f03c9e78700) at pthread_create.c:308
#10 0x00007f040706eccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f040aceb780 (LWP 2797)):
[KCrash Handler]
#6  KStatusNotifierItem::actionCollection (this=0x0) at ../../kdeui/notifications/kstatusnotifieritem.cpp:519
#7  0x000000000041bf97 in KopeteWindow::slotTrayAboutToShowMenu (this=0x18739b0, popup=0x173e6e0) at ../../../kopete/kopete/kopetewindow.cpp:1241
#8  0x00007f0408715781 in QMetaObject::activate (sender=0x1aa1f90, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff45453010) at kernel/qobject.cpp:3547
#9  0x0000000000415fbd in KopeteSystemTray::aboutToShowMenu (this=<optimized out>, _t1=0x173e6e0) at ./systemtray.moc:121
#10 0x0000000000416525 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at ./systemtray.moc:65
#11 KopeteSystemTray::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./systemtray.moc:58
#12 0x00007f0408715781 in QMetaObject::activate (sender=0x173e6e0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#13 0x00007f0408709401 in QMetaMethod::invoke (this=0x7fff45453420, object=0x173e6e0, connectionType=Qt::DirectConnection, returnValue=..., val0=..., val1=..., val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., val8=..., val9=...) at kernel/qmetaobject.cpp:1664
#14 0x00007f040870b710 in QMetaObject::invokeMethod (obj=0x173e6e0, member=<optimized out>, type=Qt::AutoConnection, ret=..., val0=..., val1=..., val2=..., val3=..., val4=..., val5=..., val6=..., val7=..., val8=..., val9=...) at kernel/qmetaobject.cpp:1179
#15 0x00007f0403348ba4 in ?? () from /usr/lib/x86_64-linux-gnu/libdbusmenu-qt.so.2
#16 0x00007f040334b17e in ?? () from /usr/lib/x86_64-linux-gnu/libdbusmenu-qt.so.2
#17 0x00007f040334b347 in ?? () from /usr/lib/x86_64-linux-gnu/libdbusmenu-qt.so.2
#18 0x00007f040832c37b in QDBusConnectionPrivate::deliverCall (this=0x1aa2560, object=0x173d630, msg=..., metaTypes=..., slotIdx=11) at qdbusintegrator.cpp:947
#19 0x00007f040832d4dd in QDBusConnectionPrivate::activateCall (this=0x1aa2560, object=0x173d630, flags=4080, msg=...) at qdbusintegrator.cpp:857
#20 0x00007f040832dbd7 in QDBusConnectionPrivate::activateObject (this=0x1aa2560, node=..., msg=..., pathStartPos=<optimized out>) at qdbusintegrator.cpp:1443
#21 0x00007f040832df2b in QDBusActivateObjectEvent::placeMetaCall (this=0x441ba50) at qdbusintegrator.cpp:1537
#22 0x00007f040871a946 in QObject::event (this=0x173d630, e=<optimized out>) at kernel/qobject.cpp:1195
#23 0x00007f04078057b4 in notify_helper (e=0x441ba50, receiver=0x173d630, this=0x172dde0) at kernel/qapplication.cpp:4556
#24 QApplicationPrivate::notify_helper (this=0x172dde0, receiver=0x173d630, e=0x441ba50) at kernel/qapplication.cpp:4528
#25 0x00007f040780a583 in QApplication::notify (this=0x7fff45455110, receiver=0x173d630, e=0x441ba50) at kernel/qapplication.cpp:4417
#26 0x00007f040916b006 in KApplication::notify (this=0x7fff45455110, receiver=0x173d630, event=0x441ba50) at ../../kdeui/kernel/kapplication.cpp:311
#27 0x00007f040870132c in QCoreApplication::notifyInternal (this=0x7fff45455110, receiver=0x173d630, event=0x441ba50) at kernel/qcoreapplication.cpp:915
#28 0x00007f040870510a in sendEvent (event=0x441ba50, receiver=0x173d630) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#29 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x16c3440) at kernel/qcoreapplication.cpp:1539
#30 0x00007f0408730493 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#31 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:279
#32 0x00007f0401ffbd53 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007f0401ffc0a0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007f0401ffc164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007f04087308bf in QEventDispatcherGlib::processEvents (this=0x16c4d20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#36 0x00007f04078adcde in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#37 0x00007f04086ffe62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#38 0x00007f04087000b7 in QEventLoop::exec (this=0x1cc38c0, flags=...) at kernel/qeventloop.cpp:204
#39 0x00007f03ed2e17c4 in logout (res=..., this=0x1ce1e30) at ../../../../kopete/protocols/jabber/googletalk/googletalk.cpp:175
#40 GoogleTalk::logout (this=0x1ce1e30, res=...) at ../../../../kopete/protocols/jabber/googletalk/googletalk.cpp:136
#41 0x00007f03ed2e1a2b in GoogleTalk::~GoogleTalk (this=0x1ce1e30, __in_chrg=<optimized out>) at ../../../../kopete/protocols/jabber/googletalk/googletalk.cpp:86
#42 0x00007f03ed2e1ad9 in GoogleTalk::~GoogleTalk (this=0x1ce1e30, __in_chrg=<optimized out>) at ../../../../kopete/protocols/jabber/googletalk/googletalk.cpp:92
#43 0x00007f03ed29987b in JabberAccount::cleanup (this=0x1d445e0) at ../../../../kopete/protocols/jabber/jabberaccount.cpp:189
#44 0x00007f03ed2a44e6 in JabberAccount::~JabberAccount (this=0x1d445e0, __in_chrg=<optimized out>) at ../../../../kopete/protocols/jabber/jabberaccount.cpp:167
#45 0x00007f03ed2a45d9 in JabberAccount::~JabberAccount (this=0x1d445e0, __in_chrg=<optimized out>) at ../../../../kopete/protocols/jabber/jabberaccount.cpp:173
#46 0x00007f040871a978 in QObject::event (this=0x1d445e0, e=<optimized out>) at kernel/qobject.cpp:1176
#47 0x00007f04078057b4 in notify_helper (e=0x2652380, receiver=0x1d445e0, this=0x172dde0) at kernel/qapplication.cpp:4556
#48 QApplicationPrivate::notify_helper (this=0x172dde0, receiver=0x1d445e0, e=0x2652380) at kernel/qapplication.cpp:4528
#49 0x00007f040780a583 in QApplication::notify (this=0x7fff45455110, receiver=0x1d445e0, e=0x2652380) at kernel/qapplication.cpp:4417
#50 0x00007f040916b006 in KApplication::notify (this=0x7fff45455110, receiver=0x1d445e0, event=0x2652380) at ../../kdeui/kernel/kapplication.cpp:311
#51 0x00007f040870132c in QCoreApplication::notifyInternal (this=0x7fff45455110, receiver=0x1d445e0, event=0x2652380) at kernel/qcoreapplication.cpp:915
#52 0x00007f040870510a in sendEvent (event=0x2652380, receiver=0x1d445e0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#53 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x16c3440) at kernel/qcoreapplication.cpp:1539
#54 0x00007f0408730493 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#55 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:279
#56 0x00007f0401ffbd53 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#57 0x00007f0401ffc0a0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#58 0x00007f0401ffc164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#59 0x00007f04087308bf in QEventDispatcherGlib::processEvents (this=0x16c4d20, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#60 0x00007f04078adcde in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#61 0x00007f04086ffe62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#62 0x00007f04087000b7 in QEventLoop::exec (this=0x7fff45455090, flags=...) at kernel/qeventloop.cpp:204
#63 0x00007f0408705407 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#64 0x00000000004141ff in main (argc=3, argv=0x7fff45455f98) at ../../../kopete/kopete/main.cpp:105

This bug may be a duplicate of or related to bug 251226.

Possible duplicates by query: bug 309202.

Reported using DrKonqi
Comment 1 Christoph Feck 2013-05-03 10:53:39 UTC
Crash caused by local event loop in logout() from googletalk/googletalk.cpp.
Comment 2 Pali Rohár 2013-06-01 21:55:42 UTC
SVN commit 1356757 by pali:

Fix crashing Kopete compiled with jabber google talk support when exiting

Related: bug 251226
Related: bug 265295
FIXED-IN: 4.11


 M  +8 -1      googletalk.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1356757