Fix crashing Kopete compiled with jabber google talk support when exiting

BUG: 319215
BUG: 251226
BUG: 265295
FIXED-IN: 4.11

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1356757